caspar (20020226)

  * First tarball build.

 -- Joost van Baal <joostvb-caspar-cl-21@mdcc.cx>  Tue, 26 Feb 2002 18:36:49 +0100