@@ -1,4 +1,4 @@
-$Id: TODO,v 1.3 2002-02-26 19:13:14 joostvb Exp $
+$Id: TODO,v 1.4 2002-02-26 19:17:55 joostvb Exp $
 
 /home/joostvb/cvs-gelfand/include/install.mk
 and
@@ -23,6 +23,9 @@ joostvb@gelfand:~/cvs-gelfand/gelfand
 joostvb@gelfand:~/cvs-gelfand/mdcc.cx/
 
 todo:
+
+joostvb@gelfand:~/cvs-gelfand/mdcc.cx/www/joostvb/verlanglijst
+and other joostvb/ stuff
 
 cvs-gelfand/mdcc.cx/djb : one big mess...
 
